feat: CRUD operation for detector is completed
