# docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "This is a simple weather server.",
-        "title": "Swagger Example API",
+        "title": "Swagger Example API of the weather server",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
@@ -13,38 +13,9 @@
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "1.0"
+        "version": "0.1"
     },
     "paths": {
-        "/detector/{id}": {
-            "get": {
-                "description": "get detector by id",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "get detector by id",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "format": "int",
-                        "description": "name search by id",
-                        "name": "id",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/storage.Detector"
-                        }
-                    }
-                }
-            }
-        },
         "/detectors": {
             "get": {
                 "description": "get all detectors",
@@ -66,6 +37,103 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "create detector",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "create detector",
+                "parameters": [
+                    {
+                        "description": "Detector",
+                        "name": "detector",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/storage.Detector"
+                        }
+                    }
+                ]
+            }
+        },
+        "/detectors/{id}": {
+            "get": {
+                "description": "get detector by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "get detector by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Id of detector",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/storage.Detector"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "update detector",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "update detector",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Id of detector",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Detector",
+                        "name": "detector",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/storage.Detector"
+                        }
+                    }
+                ]
+            },
+            "delete": {
+                "description": "delete detector",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "delete detector",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Id of detector",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ]
             }
         }
     },
